--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,14 @@
 Package: survJamda.data
 Type: Package
 Title: survJamda.data
-Version: 1.0
+Version: 1.0.1
 Date: 2010-11-01
 Author: Haleh Yasrebi
 Maintainer: Haleh Yasrebi<hyasrebi@yahoo.com>
 Description: Three breast cancer data sets for survJamda-R package
 License: GPL (>= 2)
 LazyLoad: yes
-Packaged: 2010-11-01 10:16:14 UTC; hyasrebi
 Repository: CRAN
-Date/Publication: 2010-11-04 19:01:48
+Date/Publication: 2012-10-29 08:59:53
+Packaged: 2012-10-29 08:59:52 UTC; ripley
+Depends: R (>= 2.10)
