--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,15 @@
 Package: survJamda.data
 Type: Package
-Title: survJamda.data
-Version: 1.0.1
-Date: 2010-11-01
+Title: Data for Package 'survJambda'
+Version: 1.0.2
+Date: 2015-05-01
 Author: Haleh Yasrebi
 Maintainer: Haleh Yasrebi<hyasrebi@yahoo.com>
-Description: Three breast cancer data sets for survJamda-R package
+Description: Three breast cancer gene expression data sets that can be used for package 'survJamda'. This package contains the gene expression and phenotype data of GSE1992, GSE3143 and GSE4335. 
 License: GPL (>= 2)
 LazyLoad: yes
-Repository: CRAN
-Date/Publication: 2012-10-29 08:59:53
-Packaged: 2012-10-29 08:59:52 UTC; ripley
+Packaged: 2015-05-02 13:53:17 UTC; hyasrebi
 Depends: R (>= 2.10)
+NeedsCompilation: no
+Repository: CRAN
+Date/Publication: 2015-05-02 16:31:07
